--- a/css/style.css
+++ b/css/style.css
@@ -583,8 +583,8 @@ ul.goods {
 }
 
 .gallery-item {
+  position: relative;
   display: grid;
-  height: 516px;
   grid-template-columns: repeat(2, 560px);
   column-gap: 40px;
 }
@@ -639,7 +639,6 @@ ul.goods {
 }
 
 .gallery-title {
-  position: relative;
   margin: 0;
   margin-top: 93px;
   margin-bottom: 25px;
@@ -657,6 +656,7 @@ a.gallery-link {
 
 .gallery-text {
   line-height: 20px;
+  padding-right: 60px;
 }
 
 .parameters {
@@ -667,11 +667,11 @@ a.gallery-link {
 }
 
 .parameters td {
-  min-width: 160px;
   font-size: 36px;
   line-height: 42px;
   letter-spacing: 0.1em;
   padding: 0;
+  padding-right: 55px;
 }
 
 .parameters th {
@@ -682,9 +682,25 @@ a.gallery-link {
   padding-top: 12px;
 }
 
+.parameters-tabl-1 td:nth-child(1) {
+  width: 100px;
+}
+
+.parameters-tabl-1 td:nth-child(2) {
+  width: 80px;
+}
+
+.parameters-tabl-3 td:nth-child(1) {
+  width: 141px;
+}
+
+
+
 
 
 /*  Переключатели  */
+
+
 
 .slider-controls {
   position: absolute;
@@ -694,8 +710,8 @@ a.gallery-link {
   list-style: none;
   margin: 0;
   padding: 0;
-  right: 90px;
-  top: 335px;
+  right: 100px;
+  bottom: 140px;
 }
 
 .slider-toggle {
@@ -789,7 +805,7 @@ button.slider-btn-active::before {
 }
 
 .service-info p {
-  letter-spacing: 1px;
+  letter-spacing: 0.1em;
   margin: 0;
 }
 
@@ -802,7 +818,7 @@ button.slider-btn-active::before {
 }
 
 .service-delivery {
-  padding-right: 258px;
+  padding-right: 200px;
 }
 
 .service-block::after {
@@ -816,7 +832,7 @@ button.slider-btn-active::before {
 .service-delivery::after {
   width: 136px;
   height: 164px;
-  top: 67px;
+  top: 70px;
   right: 0;
   background-image: url("../img/icon-delivery.svg");
 }
